--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
                         <input type="text" placeholder="Ürün, firma ya da makale arayın... ">
                     </div>
                     <div class="right-item">
-                        <div class="user-block">
+                        <div class="user-item">
                             <div class="user-img">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12Z" fill="white"/>
@@ -73,7 +73,7 @@
                                 <span>Listelerim</span>
                             </div>
                         </div>
-                        <div class="user-block">
+                        <div class="user-item">
                             <div class="user-img">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_334_962)">
@@ -94,7 +94,7 @@
                                 <span>Mesajlar</span>
                             </div>
                         </div>
-                        <div class="user-block">
+                        <div class="user-item select">
                             <div class="user-img">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="12" cy="7" r="3" stroke="black" stroke-width="2"/>
