--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
         <div class="header-wrapper">
             <div class="header-container safe-area">
                 <div class="up-block">
-                    <div class="left-item">
+                    <div class="nav-item">
                         <ul>
                             <li>Kurumsal Kayıt</li>
                             <li>Hakkımızda</li>
