--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <header class="header-root">
         <div class="header-wrapper">
             <div class="header-container safe-area">
-                <div class="up-block">
+                <div class="up-block ">
                     <div class="nav-item">
                         <ul>
                             <li>Kurumsal Kayıt</li>
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="mid-block">
+                <div class="mid-block ">
                     <div class="logo-item">
                         <picture>
                             <source media="(min-width: 768px)" srcSet="assets/img/header/logo.webp 1x, assets/img/header/logo_2x.webp" type="image/webp" />
@@ -108,19 +108,59 @@
                         </div>
                     </div>
                 </div>
-                <div class="low-block">
+
+            </div>
+            <div class="low-container">
+                <div class="low-block safe-area">
                     <div class="category-item">
                         <ul>
-                            <li>Mobilya</li>
-                            <li>Banyo</li>
-                            <li>Mutfak</li>
-                            <li>Aydınlatma</li>
-                            <li>Dış Alan</li>
-                            <li>Ofis</li>
-                            <li>Sağlık</li>
-                            <li>Dekorasyon</li>
-                            <li>Yapı</li>
-                            <li>Daha Fazla</li>
+                            <li>
+                                <a class="zero category-link" href="/">Mobilya</a>
+                                <div class="open-menu">
+                                    <div class="menu-right">
+                                        <span class="right-title">Mobilya</span>
+                                        <ul class="right-block">
+                                            <li class="right-item"><a href="/">Kanepeler ve Koltuklar</a></li>
+                                            <li class="right-item"><a href="/">Masalar ve Sandalyeler</a></li>
+                                            <li class="right-item"><a href="/">Yatak Odası</a></li>
+                                            <li class="right-item"><a href="/">Çocuk Odası</a></li>
+                                            <li class="right-item"><a href="/">Mobilya Bileşenleri</a></li>
+                                        </ul>
+                                        <div class="btn-item">
+                                            <span>Tümünü Gör</span>
+                                        </div>
+                                    </div>
+                                    <div class="menu-left">
+                                        <span class="left-title">Kanepeler ve Koltuklar</span>
+                                        <ul class="left-block">
+                                            <li class="left-item"><a href="/">Kanepeler</a></li>
+                                            <li class="left-item"><a href="/">Koltuklar</a></li>
+                                            <li class="left-item"><a href="/">Basit Koltuklar</a></li>
+                                            <li class="left-item"><a href="/">Berjerler</a></li>
+                                            <li class="left-item"><a href="/">Çekyatlar</a></li>
+                                            <li class="left-item"><a href="/">Küçük Kanepeler</a></li>
+                                            <li class="left-item"><a href="/">Tekli Koltuklar</a></li>
+                                            <li class="left-item"><a href="/">Puflar</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="menu-img">
+                                        <picture>
+                                            <source media="(min-width: 768px)" srcSet="assets/img/header/görsel.webp 1x, assets/img/header/görsel_2x.webp" type="image/webp" />
+                                            <source media="(max-width: 768px)" srcSet="assets/img/header/görsel.png assets/img/header/görsel_2x.png" type="image/png" />
+                                            <img src="assets/img/header/görsel.png" alt="görsel" />
+                                        </picture>
+                                    </div>
+                                </div>
+                            </li>
+                            <li> <a class="category-link" href="/">Banyo</a> </li>
+                            <li> <a class="category-link" href="/">Mutfak</a> </li>
+                            <li> <a class="category-link" href="/">Aydınlatma</a> </li>
+                            <li> <a class="category-link" href="/">Dış Alan</a> </li>
+                            <li> <a class="category-link" href="/">Ofis</a> </li>
+                            <li> <a class="category-link" href="/">Sağlık</a> </li>
+                            <li> <a class="category-link" href="/">Dekorasyon</a> </li>
+                            <li> <a class="category-link" href="/">Yapı</a> </li>
+                            <li> <a class="category-link" href="/">Daha Fazla</a> </li>
                         </ul>
                     </div>
                     <div class="right-item">
@@ -128,8 +168,10 @@
                         <span>Firmalar</span>
                     </div>
                 </div>
+
             </div>
         </div>
+
     </header>
 
 
