--- a/www/index.html
+++ b/www/index.html
@@ -118,38 +118,52 @@
                                 <a class="zero category-link" href="/">Mobilya</a>
                                 <div class="open-menu">
                                     <div class="menu-right">
-                                        <span class="right-title">Mobilya</span>
-                                        <ul class="right-block">
-                                            <li class="right-item"><a href="/">Kanepeler ve Koltuklar</a></li>
-                                            <li class="right-item"><a href="/">Masalar ve Sandalyeler</a></li>
-                                            <li class="right-item"><a href="/">Yatak Odası</a></li>
-                                            <li class="right-item"><a href="/">Çocuk Odası</a></li>
-                                            <li class="right-item"><a href="/">Mobilya Bileşenleri</a></li>
-                                        </ul>
-                                        <div class="btn-item">
-                                            <span>Tümünü Gör</span>
+                                        <div class="right-list">
+                                            <span class="right-title">Mobilya</span>
+                                            <ul class="right-block">
+                                                <li class="right-item active"><a href="/">Kanepeler ve Koltuklar</a></li>
+                                                <li class="right-item"><a href="/">Masalar ve Sandalyeler</a></li>
+                                                <li class="right-item"><a href="/">Yatak Odası</a></li>
+                                                <li class="right-item"><a href="/">Çocuk Odası</a></li>
+                                                <li class="right-item"><a href="/">Mobilya Bileşenleri</a></li>
+                                            </ul>
                                         </div>
+
+                                        <a class="btn-item" href="/">
+                                            Tümünü Gör
+                                        </a>
                                     </div>
                                     <div class="menu-left">
-                                        <span class="left-title">Kanepeler ve Koltuklar</span>
-                                        <ul class="left-block">
-                                            <li class="left-item"><a href="/">Kanepeler</a></li>
-                                            <li class="left-item"><a href="/">Koltuklar</a></li>
-                                            <li class="left-item"><a href="/">Basit Koltuklar</a></li>
-                                            <li class="left-item"><a href="/">Berjerler</a></li>
-                                            <li class="left-item"><a href="/">Çekyatlar</a></li>
-                                            <li class="left-item"><a href="/">Küçük Kanepeler</a></li>
-                                            <li class="left-item"><a href="/">Tekli Koltuklar</a></li>
-                                            <li class="left-item"><a href="/">Puflar</a></li>
-                                        </ul>
+                                        <div class="left-list">
+                                            <span class="left-title">Kanepeler ve Koltuklar</span>
+                                            <div class="left-link">
+                                                <ul class="left-block">
+                                                    <li class="left-item"><a href="/">Kanepeler</a></li>
+                                                    <li class="left-item"><a href="/">Koltuklar</a></li>
+                                                    <li class="left-item"><a href="/">Basit Koltuklar</a></li>
+                                                    <li class="left-item"><a href="/">Berjerler</a></li>
+
+                                                </ul>
+                                                <ul class="left-block">
+                                                    <li class="left-item"><a href="/">Çekyatlar</a></li>
+                                                    <li class="left-item"><a href="/">Küçük Kanepeler</a></li>
+                                                    <li class="left-item"><a href="/">Tekli Koltuklar</a></li>
+                                                    <li class="left-item"><a href="/">Puflar</a></li>
+                                                </ul>
+                                                <div class="left-img">
+                                                    <picture>
+                                                        <source media="(min-width: 768px)" srcSet="assets/img/header/görsel.webp 1x, assets/img/header/görsel_2x.webp" type="image/webp" />
+                                                        <source media="(max-width: 768px)" srcSet="assets/img/header/görsel.png assets/img/header/görsel_2x.png" type="image/png" />
+                                                        <img src="assets/img/header/görsel.png" alt="görsel" />
+                                                    </picture>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+
                                     </div>
-                                    <div class="menu-img">
-                                        <picture>
-                                            <source media="(min-width: 768px)" srcSet="assets/img/header/görsel.webp 1x, assets/img/header/görsel_2x.webp" type="image/webp" />
-                                            <source media="(max-width: 768px)" srcSet="assets/img/header/görsel.png assets/img/header/görsel_2x.png" type="image/png" />
-                                            <img src="assets/img/header/görsel.png" alt="görsel" />
-                                        </picture>
-                                    </div>
+
                                 </div>
                             </li>
                             <li> <a class="category-link" href="/">Banyo</a> </li>
